--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "dependencies": {
     "axios": "^1.2.1",
     "express": "^4.18.2",
-    "express-cache-middleware": "^1.0.1"
+    "express-api-cache": "^1.0.4"
   }
 }
